// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CatalogTile href renders properly 1`] = `
<a
  class="catalog-tile-pf featured"
  href="http://patternfly.org"
  id="test-href"
>
  <div
    class="catalog-tile-pf-header"
  >
    <img
      alt=""
      class="catalog-tile-pf-icon"
      src="<PatternFly Brand Image here>"
    />
  </div>
  <div
    class="catalog-tile-pf-body"
  >
    <div
      class="catalog-tile-pf-title"
    >
      Patternfly
    </div>
    <div
      class="catalog-tile-pf-subtitle"
    >
      Provided by Red Hat
    </div>
    <div
      class="catalog-tile-pf-description"
    >
      <span>
        1234567890123
      </span>
    </div>
  </div>
</a>
`;

exports[`CatalogTile onClick behaves properly 1`] = `
<a
  class="catalog-tile-pf featured test-click-class"
  href="#"
  id="test-on-click"
>
  <div
    class="catalog-tile-pf-header"
  >
    <img
      alt=""
      class="catalog-tile-pf-icon"
      src="<PatternFly Brand Image here>"
    />
  </div>
  <div
    class="catalog-tile-pf-body"
  >
    <div
      class="catalog-tile-pf-title"
    >
      Patternfly
    </div>
    <div
      class="catalog-tile-pf-subtitle"
    >
      Provided by Red Hat
    </div>
    <div
      class="catalog-tile-pf-description"
    >
      <span>
        1234567890123
      </span>
    </div>
  </div>
</a>
`;

exports[`CatalogTile renders properly 1`] = `
<div>
  <div
    class="catalog-tile-pf featured"
    id="single-badge-test"
  >
    <div
      class="catalog-tile-pf-header"
    >
      <img
        alt=""
        class="catalog-tile-pf-icon"
        src="<PatternFly Brand Image here>"
      />
      <div
        class="catalog-tile-pf-badge-container"
      >
        <span>
          <span
            class="catalog-tile-pf-badge"
          >
            <span
              aria-hidden="true"
              class="fa fa-cog"
            />
            <span
              class="sr-only"
            >
              Certified
            </span>
          </span>
        </span>
        <span>
          <span
            class="catalog-tile-pf-badge"
          >
            <span
              aria-hidden="true"
              class="fa fa-cog"
            />
          </span>
        </span>
      </div>
    </div>
    <div
      class="catalog-tile-pf-body"
    >
      <div
        class="catalog-tile-pf-title"
      >
        Patternfly
      </div>
      <div
        class="catalog-tile-pf-subtitle"
      >
        <span>
          Provided by 
          <a
            href="redhat.com"
          >
            Red Hat
          </a>
        </span>
      </div>
      <div
        class="catalog-tile-pf-description"
      >
        <span>
          A community of designers and developers collaborating to build a UI framework for enterprise web applications.
        </span>
      </div>
    </div>
  </div>
  <div
    class="catalog-tile-pf"
    id="multi-badge-test"
  >
    <div
      class="catalog-tile-pf-header"
    >
      <img
        alt=""
        class="catalog-tile-pf-icon"
        src="<GitHub Brand Image here>"
      />
      <div
        class="catalog-tile-pf-badge-container"
      >
        <span>
          <span
            class="catalog-tile-pf-badge"
          >
            <span
              aria-hidden="true"
              class="fa fa-cog"
            />
            <span
              class="sr-only"
            >
              Certified
            </span>
          </span>
        </span>
        <span>
          <span
            class="catalog-tile-pf-badge"
          >
            <span
              aria-hidden="true"
              class="pficon pficon-ok"
            />
            <span
              class="sr-only"
            >
              USDA Approved
            </span>
          </span>
        </span>
      </div>
    </div>
    <div
      class="catalog-tile-pf-body"
    >
      <div
        class="catalog-tile-pf-title"
      >
        GitHub Desktop
      </div>
      <div
        class="catalog-tile-pf-subtitle"
      >
        provided by GitHub
      </div>
      <div
        class="catalog-tile-pf-description"
      >
        <span>
          Simple collaboration from your desktop.
        </span>
      </div>
    </div>
  </div>
  <div
    class="catalog-tile-pf featured"
    id="long-description-test"
  >
    <div
      class="catalog-tile-pf-header"
    >
      <img
        alt=""
        class="catalog-tile-pf-icon"
        src="<PatternFly Brand Image here>"
      />
      <div
        class="catalog-tile-pf-badge-container"
      >
        <span>
          <span
            class="catalog-tile-pf-badge"
          >
            <span
              aria-hidden="true"
              class="fa fa-cog"
            />
            <span
              class="sr-only"
            >
              Certified
            </span>
          </span>
        </span>
      </div>
    </div>
    <div
      class="catalog-tile-pf-body"
    >
      <div
        class="catalog-tile-pf-title"
      >
        Patternfly
      </div>
      <div
        class="catalog-tile-pf-subtitle"
      >
        <span>
          Provided by 
          <a
            href="redhat.com"
          >
            Red Hat
          </a>
        </span>
      </div>
      <div
        class="catalog-tile-pf-description"
      >
        <span>
          This is a very long description that should be truncated after 112 characters. 112 is the default but can be …
        </span>
      </div>
    </div>
  </div>
  <div
    class="catalog-tile-pf"
    id="test-iconClass"
  >
    <div
      class="catalog-tile-pf-header"
    >
      <span
        class="catalog-tile-pf-icon fa fa-codepen"
      />
      <div
        class="catalog-tile-pf-badge-container"
      >
        <span>
          <span
            class="catalog-tile-pf-badge"
          >
            <span
              aria-hidden="true"
              class="pficon pficon-ok"
            />
            <span
              class="sr-only"
            >
              USDA Approved
            </span>
          </span>
        </span>
      </div>
    </div>
    <div
      class="catalog-tile-pf-body"
    >
      <div
        class="catalog-tile-pf-title"
      >
        CodePen
      </div>
      <div
        class="catalog-tile-pf-subtitle"
      >
        provided by CodePen
      </div>
      <div
        class="catalog-tile-pf-description"
      >
        <span>
          An online community for testing and showcasing user-created HTML, CSS and JavaScript code snippets.
        </span>
      </div>
    </div>
  </div>
  <div
    class="catalog-tile-pf featured"
    id="test-custom-truncation"
  >
    <div
      class="catalog-tile-pf-header"
    >
      <img
        alt=""
        class="catalog-tile-pf-icon"
        src="<PatternFly Brand Image here>"
      />
    </div>
    <div
      class="catalog-tile-pf-body"
    >
      <div
        class="catalog-tile-pf-title"
      >
        Patternfly
      </div>
      <div
        class="catalog-tile-pf-subtitle"
      >
        <span>
          Provided by 
          <a
            href="redhat.com"
          >
            Red Hat
          </a>
        </span>
      </div>
      <div
        class="catalog-tile-pf-description"
      >
        <span>
          truncated
        </span>
      </div>
    </div>
  </div>
  <a
    class="catalog-tile-pf featured"
    href="https://github.com/patternfly/patternfly-react"
    id="tile-footer-test"
  >
    <div
      class="catalog-tile-pf-header"
    >
      <img
        alt=""
        class="catalog-tile-pf-icon"
        src="<PatternFly Brand Image here>"
      />
      <div
        class="catalog-tile-pf-badge-container"
      >
        <span>
          <span
            class="catalog-tile-pf-badge"
          >
            <span
              aria-hidden="true"
              class="fa fa-cog"
            />
            <span
              class="sr-only"
            >
              Certified
            </span>
          </span>
        </span>
      </div>
    </div>
    <div
      class="catalog-tile-pf-body"
    >
      <div
        class="catalog-tile-pf-title"
      >
        Patternfly-React
      </div>
      <div
        class="catalog-tile-pf-subtitle"
      >
        provided by Red Hat
      </div>
      <div
        class="catalog-tile-pf-description"
      >
        <span>
          This is a very long description that should be truncated after 112 characters. 112 is the default but can be overridden if need be. You can also provide a custom truncation function to truncate the description how you see fit. It will be passed the description, max length, and id.
        </span>
      </div>
    </div>
    <div
      class="catalog-tile-pf-footer"
    >
      <span>
        <span
          aria-hidden="true"
          class="pficon pficon-ok"
        />
         Enabled
      </span>
    </div>
  </a>
  <a
    class="catalog-tile-pf featured"
    href="https://github.com/patternfly/patternfly-react"
    id="custom-icon-svg-test"
  >
    <div
      class="catalog-tile-pf-header"
    >
      <span
        class="catalog-tile-pf-icon "
      >
        <svg
          height="100"
          width="100"
        >
          <circle
            cx="50"
            cy="50"
            fill="red"
            r="40"
            stroke="black"
            stroke-width="3"
          />
        </svg>
      </span>
    </div>
    <div
      class="catalog-tile-pf-body"
    >
      <div
        class="catalog-tile-pf-title"
      />
      <div
        class="catalog-tile-pf-subtitle"
      />
      <div
        class="catalog-tile-pf-description"
      >
        <span />
      </div>
    </div>
  </a>
</div>
`;
